--- a/src/components/RowPost/RowPost.css
+++ b/src/components/RowPost/RowPost.css
@@ -3,18 +3,32 @@
     color: #fff;
 }
 
-.posters{
+.posters {
     display: flex;
     padding: 20px;
     overflow-x: scroll;
     overflow-y: hidden;
-}
-
-.posters::-webkit-scrollbar{
+  }
+  
+  .posters::-webkit-scrollbar {
     display: none;
-}
-
-.poster{
-    max-height: 250px;
+  }
+  
+  .poster{
+    cursor: pointer;
     margin-right: 10px;
+    max-height: 250px;
+    transition: transform 0.3s ease; /* Add a smooth transition for the transform property */
+  }
+
+  .smallPoster{
+    cursor: pointer;
+    max-height: 150px;
+    margin-right: 10px;
+    transition: transform 0.3s ease; /* Add a smooth transition for the transform property */
 }
+  
+  .poster:hover, .smallPoster:hover {
+    transform: scale(1.1);
+  }
+  
